--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4
       - name: Run lint
-        run: npx run lint
+        run: npm run lint
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
