--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
