--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-virtualized": "^9.22.5"
